--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ListActivity"
+            android:name=".ProductListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CreateProductActivity"
+            android:name=".ProductCreateActivity"
             android:label="@string/title_activity_list"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
